
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {char* desc; int * address; } ;


 int printf (char*,...) ;
 TYPE_1__* targets ;

__attribute__((used)) static void usage(char *arg)
{
    int x = 0;

    printf("             ______      __      ________  \n");
    printf("           /  __  /     /_/     /  _____/\n");
    printf("          /  /_/ /______________\\  \\_____________\n");
    printf("         /  ___ / __  / / __  /  \\  \\/ _ \\/  __/\n");
    printf("        /  /   / /_/ / / / / /___/  /  __/  /__\n");
    printf("   ____/__/____\\__,_/_/_/ /_/______/\\___/\\____/____\n");
    printf("   ---------------- www.painsec.com ---------------\n\n");
    printf("(c) NighterMan & BatchDrake 2011, almost 2012\n");
    printf("OH MY GOD WE ARE ALL ABOUT TO DIE\n\n");
    printf("Available Targets:\n\n");



    while(targets[x].address != ((void*)0)) {
        printf("  %2i: %s\n", x + 1, targets[x].desc);
        x++;
    }

    printf("\n");
    printf("Telnetd encrypt_keyid exploit\n");
    printf("Usage: %s [ip] [port] [target]\n\n", arg);
}
