; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_18280.c_usage.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_18280.c_usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8*, i32* }

@.str = private unnamed_addr constant [45 x i8] c"             ______      __      ________  \0A\00", align 1
@.str.1 = private unnamed_addr constant [43 x i8] c"           /  __  /     /_/     /  _____/\0A\00", align 1
@.str.2 = private unnamed_addr constant [51 x i8] c"          /  /_/ /______________\\  \\_____________\0A\00", align 1
@.str.3 = private unnamed_addr constant [50 x i8] c"         /  ___ / __  / / __  /  \\  \\/ _ \\/  __/\0A\00", align 1
@.str.4 = private unnamed_addr constant [49 x i8] c"        /  /   / /_/ / / / / /___/  /  __/  /__\0A\00", align 1
@.str.5 = private unnamed_addr constant [53 x i8] c"   ____/__/____\\__,_/_/_/ /_/______/\\___/\\____/____\0A\00", align 1
@.str.6 = private unnamed_addr constant [54 x i8] c"   ---------------- www.painsec.com ---------------\0A\0A\00", align 1
@.str.7 = private unnamed_addr constant [47 x i8] c"(c) NighterMan & BatchDrake 2011, almost 2012\0A\00", align 1
@.str.8 = private unnamed_addr constant [36 x i8] c"OH MY GOD WE ARE ALL ABOUT TO DIE\0A\0A\00", align 1
@.str.9 = private unnamed_addr constant [21 x i8] c"Available Targets:\0A\0A\00", align 1
@targets = common dso_local global %struct.TYPE_2__* null, align 8
@.str.10 = private unnamed_addr constant [11 x i8] c"  %2i: %s\0A\00", align 1
@.str.11 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@.str.12 = private unnamed_addr constant [31 x i8] c"Telnetd encrypt_keyid exploit\0A\00", align 1
@.str.13 = private unnamed_addr constant [33 x i8] c"Usage: %s [ip] [port] [target]\0A\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @usage to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @usage(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  store i32 0, i32* %3, align 4
  %4 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0))
  %5 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.1, i64 0, i64 0))
  %6 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.2, i64 0, i64 0))
  %7 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str.3, i64 0, i64 0))
  %8 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.4, i64 0, i64 0))
  %9 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str.5, i64 0, i64 0))
  %10 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str.6, i64 0, i64 0))
  %11 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.7, i64 0, i64 0))
  %12 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.8, i64 0, i64 0))
  %13 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.9, i64 0, i64 0))
  br label %14

14:                                               ; preds = %22, %1
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** @targets, align 8
  %16 = load i32, i32* %3, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i64 %17
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 1
  %20 = load i32*, i32** %19, align 8
  %21 = icmp ne i32* %20, null
  br i1 %21, label %22, label %34

22:                                               ; preds = %14
  %23 = load i32, i32* %3, align 4
  %24 = add nsw i32 %23, 1
  %25 = load %struct.TYPE_2__*, %struct.TYPE_2__** @targets, align 8
  %26 = load i32, i32* %3, align 4
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i64 %27
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 0
  %30 = load i8*, i8** %29, align 8
  %31 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.10, i64 0, i64 0), i32 %24, i8* %30)
  %32 = load i32, i32* %3, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %3, align 4
  br label %14

34:                                               ; preds = %14
  %35 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.11, i64 0, i64 0))
  %36 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.12, i64 0, i64 0))
  %37 = load i8*, i8** %2, align 8
  %38 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.13, i64 0, i64 0), i8* %37)
  ret void
}

declare dso_local i32 @printf(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
